[metadata]
name = pychart
version = attr: pychart.VERSION
author = ArtificialVoid
description = a package to read .chart files
long_description = file: README.md
classifiers = 
  Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
  requests
  importlib-metadata; python_version<"3.10"

  
