[metadata]
name = pychart
version = attr: pychart.VERSION
author = ArtificialVoid
description = a package to read .chart files
long_description = file: README.md
long_description_content_type = text/markdown
project_urls = 
  repository = https://github.com/ArtificialVoid1/Pychart
classifiers = 
  Programming Language :: Python :: 3

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

  
