[metadata]
name = pygh
version = attr: pygh.VERSION
author = ArtificialVoid
description = a package to read .chart files
long_description = file: README.md
long_description_content_type = text/markdown
project_urls = 
  repository = https://github.com/ArtificialVoid1/Pyguitarhero
classifiers = 
  Programming Language :: Python :: 3

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

  
